# equirec2dymaxion

./: CMakeLists.txt  equirec2dymaxion.cxx  graypr.cxx
